refactor(fetch): use duckdb for transforming the supported_tickers CSV

--- a/init-db/init.ipynb
+++ b/init-db/init.ipynb
@@ -20,6 +20,7 @@
     "from os import environ\n",
     "import httpx\n",
     "import importlib\n",
+    "import pathlib\n",
     "import polars as pl\n",
     "import src.fetch\n",
     "import src.ingest\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +45,13 @@
     "    tiingo_token=environ[\"TIINGO_TOKEN\"],\n",
     "    add_ticker_column=True,\n",
     "    min_start_date=\"1995-01-01\",\n",
-    "    save_dir=\"data/sample\",\n",
+    "    save_dir=\"data/sample2\",\n",
     "    response_format=\"csv\",\n",
     "    failed_tickers_file=\"failed_tickers.csv\",\n",
     ")\n",
     "\n",
-    "if \"df_tickers\" not in locals():\n",
-    "    df_tickers = src.fetch.get_supported_tickers()"
+    "if \"duckdb_con\" not in locals():\n",
+    "    duckdb_con = src.fetch.get_supported_tickers()"
    ]
   },
   {
@@ -79,40 +80,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(17441, 6)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "exchanges = pl.col(\"exchange\").is_in([\"NYSE\", \"NASDAQ\", \"NYSE MKT\", \"NYSE ARCA\"])\n",
-    "# Ignore tickers that has null in start date (I don't know why these exist)\n",
-    "# TODO: the daily batch job should be able to add previosly unseen tickers.\n",
-    "not_null_start_date = pl.col(\"startDate\").is_not_null()\n",
-    "# Get all stocks\n",
-    "stocks = pl.col(\"assetType\") == \"Stock\"\n",
-    "# Only include ETFs that are still traded\n",
-    "etfs = (pl.col(\"assetType\") == \"ETF\") & (pl.col(\"endDate\") == pl.col(\"endDate\").max())\n",
-    "\n",
-    "us_filter = exchanges & not_null_start_date & (stocks | etfs)\n",
-    "df_us = df_tickers.filter(us_filter)\n",
-    "df_us.shape"
+    "us_tickers_query = pathlib.Path(\"sql/selected_us_tickers.sql\").read_text()\n",
+    "duckdb_con.sql(us_tickers_query)"
    ]
   },
   {
@@ -122,38 +95,13 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (14, 6)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ticker</th><th>exchange</th><th>assetType</th><th>priceCurrency</th><th>startDate</th><th>endDate</th></tr><tr><td>str</td><td>str</td><td>str</td><td>str</td><td>date</td><td>date</td></tr></thead><tbody><tr><td>&quot;AWH&quot;</td><td>&quot;NASDAQ&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2000-10-02</td><td>2024-05-10</td></tr><tr><td>&quot;AWH&quot;</td><td>&quot;NYSE&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2006-07-12</td><td>2017-08-28</td></tr><tr><td>&quot;BETR&quot;</td><td>&quot;NYSE&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2023-08-24</td><td>2024-05-10</td></tr><tr><td>&quot;BETR&quot;</td><td>&quot;NYSE&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2015-08-05</td><td>2023-08-29</td></tr><tr><td>&quot;BFLY-WS&quot;</td><td>&quot;NYSE&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2021-02-16</td><td>2024-05-10</td></tr><tr><td>&quot;BFLY-WS&quot;</td><td>&quot;NYSE&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2020-07-13</td><td>2022-12-23</td></tr><tr><td>&quot;CNR&quot;</td><td>&quot;NYSE&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>1992-04-06</td><td>2022-07-22</td></tr><tr><td>&quot;CNR&quot;</td><td>&quot;NYSE MKT&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2016-01-04</td><td>2022-07-25</td></tr><tr><td>&quot;COGT&quot;</td><td>&quot;NASDAQ&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2018-03-29</td><td>2024-05-10</td></tr><tr><td>&quot;COGT&quot;</td><td>&quot;NASDAQ&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2007-12-27</td><td>2018-04-13</td></tr><tr><td>&quot;CSR&quot;</td><td>&quot;NYSE&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>1997-10-17</td><td>2024-05-10</td></tr><tr><td>&quot;CSR&quot;</td><td>&quot;NYSE&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2007-10-29</td><td>2011-09-15</td></tr><tr><td>&quot;CZR&quot;</td><td>&quot;NASDAQ&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2014-09-22</td><td>2024-05-10</td></tr><tr><td>&quot;CZR&quot;</td><td>&quot;NASDAQ&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2012-02-08</td><td>2020-07-20</td></tr></tbody></table></div>"
-      ],
       "text/plain": [
-       "shape: (14, 6)\n",
-       "┌─────────┬──────────┬───────────┬───────────────┬────────────┬────────────┐\n",
-       "│ ticker  ┆ exchange ┆ assetType ┆ priceCurrency ┆ startDate  ┆ endDate    │\n",
-       "│ ---     ┆ ---      ┆ ---       ┆ ---           ┆ ---        ┆ ---        │\n",
-       "│ str     ┆ str      ┆ str       ┆ str           ┆ date       ┆ date       │\n",
-       "╞═════════╪══════════╪═══════════╪═══════════════╪════════════╪════════════╡\n",
-       "│ AWH     ┆ NASDAQ   ┆ Stock     ┆ USD           ┆ 2000-10-02 ┆ 2024-05-10 │\n",
-       "│ AWH     ┆ NYSE     ┆ Stock     ┆ USD           ┆ 2006-07-12 ┆ 2017-08-28 │\n",
-       "│ BETR    ┆ NYSE     ┆ Stock     ┆ USD           ┆ 2023-08-24 ┆ 2024-05-10 │\n",
-       "│ BETR    ┆ NYSE     ┆ Stock     ┆ USD           ┆ 2015-08-05 ┆ 2023-08-29 │\n",
-       "│ BFLY-WS ┆ NYSE     ┆ Stock     ┆ USD           ┆ 2021-02-16 ┆ 2024-05-10 │\n",
-       "│ BFLY-WS ┆ NYSE     ┆ Stock     ┆ USD           ┆ 2020-07-13 ┆ 2022-12-23 │\n",
-       "│ CNR     ┆ NYSE     ┆ Stock     ┆ USD           ┆ 1992-04-06 ┆ 2022-07-22 │\n",
-       "│ CNR     ┆ NYSE MKT ┆ Stock     ┆ USD           ┆ 2016-01-04 ┆ 2022-07-25 │\n",
-       "│ COGT    ┆ NASDAQ   ┆ Stock     ┆ USD           ┆ 2018-03-29 ┆ 2024-05-10 │\n",
-       "│ COGT    ┆ NASDAQ   ┆ Stock     ┆ USD           ┆ 2007-12-27 ┆ 2018-04-13 │\n",
-       "│ CSR     ┆ NYSE     ┆ Stock     ┆ USD           ┆ 1997-10-17 ┆ 2024-05-10 │\n",
-       "│ CSR     ┆ NYSE     ┆ Stock     ┆ USD           ┆ 2007-10-29 ┆ 2011-09-15 │\n",
-       "│ CZR     ┆ NASDAQ   ┆ Stock     ┆ USD           ┆ 2014-09-22 ┆ 2024-05-10 │\n",
-       "│ CZR     ┆ NASDAQ   ┆ Stock     ┆ USD           ┆ 2012-02-08 ┆ 2020-07-20 │\n",
-       "└─────────┴──────────┴───────────┴───────────────┴────────────┴────────────┘"
+       "┌──────────────┐\n",
+       "│ count_star() │\n",
+       "│    int64     │\n",
+       "├──────────────┤\n",
+       "│        16945 │\n",
+       "└──────────────┘"
       ]
      },
      "execution_count": 4,
@@ -162,93 +110,21 @@
     }
    ],
    "source": [
-    "df_us.filter(pl.col(\"ticker\").is_in([\"AWH\", \"BETR\", \"BFLY-WS\", \"CNR\", \"COGT\", \"CSR\", \"CZR\"]))"
+    "duckdb_con.sql(\"select count(*) from selected_us_tickers\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (7, 6)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ticker</th><th>exchange</th><th>assetType</th><th>priceCurrency</th><th>startDate</th><th>endDate</th></tr><tr><td>str</td><td>str</td><td>str</td><td>str</td><td>date</td><td>date</td></tr></thead><tbody><tr><td>&quot;AWH&quot;</td><td>&quot;NASDAQ&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2000-10-02</td><td>2024-05-10</td></tr><tr><td>&quot;BETR&quot;</td><td>&quot;NYSE&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2023-08-24</td><td>2024-05-10</td></tr><tr><td>&quot;BFLY-WS&quot;</td><td>&quot;NYSE&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2021-02-16</td><td>2024-05-10</td></tr><tr><td>&quot;CNR&quot;</td><td>&quot;NYSE MKT&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2016-01-04</td><td>2022-07-25</td></tr><tr><td>&quot;COGT&quot;</td><td>&quot;NASDAQ&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2018-03-29</td><td>2024-05-10</td></tr><tr><td>&quot;CSR&quot;</td><td>&quot;NYSE&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>1997-10-17</td><td>2024-05-10</td></tr><tr><td>&quot;CZR&quot;</td><td>&quot;NASDAQ&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2014-09-22</td><td>2024-05-10</td></tr></tbody></table></div>"
-      ],
-      "text/plain": [
-       "shape: (7, 6)\n",
-       "┌─────────┬──────────┬───────────┬───────────────┬────────────┬────────────┐\n",
-       "│ ticker  ┆ exchange ┆ assetType ┆ priceCurrency ┆ startDate  ┆ endDate    │\n",
-       "│ ---     ┆ ---      ┆ ---       ┆ ---           ┆ ---        ┆ ---        │\n",
-       "│ str     ┆ str      ┆ str       ┆ str           ┆ date       ┆ date       │\n",
-       "╞═════════╪══════════╪═══════════╪═══════════════╪════════════╪════════════╡\n",
-       "│ AWH     ┆ NASDAQ   ┆ Stock     ┆ USD           ┆ 2000-10-02 ┆ 2024-05-10 │\n",
-       "│ BETR    ┆ NYSE     ┆ Stock     ┆ USD           ┆ 2023-08-24 ┆ 2024-05-10 │\n",
-       "│ BFLY-WS ┆ NYSE     ┆ Stock     ┆ USD           ┆ 2021-02-16 ┆ 2024-05-10 │\n",
-       "│ CNR     ┆ NYSE MKT ┆ Stock     ┆ USD           ┆ 2016-01-04 ┆ 2022-07-25 │\n",
-       "│ COGT    ┆ NASDAQ   ┆ Stock     ┆ USD           ┆ 2018-03-29 ┆ 2024-05-10 │\n",
-       "│ CSR     ┆ NYSE     ┆ Stock     ┆ USD           ┆ 1997-10-17 ┆ 2024-05-10 │\n",
-       "│ CZR     ┆ NASDAQ   ┆ Stock     ┆ USD           ┆ 2014-09-22 ┆ 2024-05-10 │\n",
-       "└─────────┴──────────┴───────────┴───────────────┴────────────┴────────────┘"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "## Clean-up filters (only necessary since supported_tickers file is messy, with duplicates)\n",
-    "semi_join_col = \"ticker_end_date\"\n",
-    "add_ticker_end_date = (pl.col(\"ticker\") + pl.lit(\"_\") + pl.col(\"endDate\")).alias(semi_join_col)\n",
-    "latest_end_date_on_duplicate_tickers = (\n",
-    "    df_us\n",
-    "    .group_by(\"ticker\").agg(pl.col(\"endDate\").max())\n",
-    "    .with_columns([add_ticker_end_date])\n",
-    ")\n",
-    "df_us_clean = (\n",
-    "    df_us.with_columns([add_ticker_end_date])\n",
-    "    .join(\n",
-    "        latest_end_date_on_duplicate_tickers,\n",
-    "        on=semi_join_col,\n",
-    "        how=\"semi\",\n",
-    "    )\n",
-    "    .drop(semi_join_col)\n",
-    ")\n",
-    "\n",
-    "df_us_clean.filter(pl.col(\"ticker\").is_in([\"AWH\", \"BETR\", \"BFLY-WS\", \"CNR\", \"COGT\", \"CSR\", \"CZR\"]))"
+    "df_us_clean = duckdb_con.table(\"selected_us_tickers\").pl()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(17441, 6)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_us.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -257,18 +133,16 @@
        "(16945, 6)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df_us_clean.shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -277,39 +151,22 @@
        "(500, 6)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "seed = 42\n",
-    "df_sampled = df_us.sample(500, seed=seed)\n",
+    "df_sampled = df_us_clean.sample(500, seed=seed)\n",
     "df_sampled.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:No data found for CERE.\n",
-      "ERROR:src.fetch:Invalid response for LCI.\n",
-      "ERROR:src.fetch:No data found for NFYS-U.\n",
-      "ERROR:src.fetch:No data found for CLA-U.\n",
-      "ERROR:src.fetch:No data found for GPACW.\n",
-      "ERROR:src.fetch:Invalid response for FOGO.\n",
-      "ERROR:src.fetch:No data found for EV.\n",
-      "ERROR:src.fetch:No data found for OB.\n",
-      "ERROR:src.fetch:No data found for FTRE.\n",
-      "ERROR:src.fetch:No data found for SES.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "await fetcher.fetch_supported_tickers(\n",
     "    df=df_sampled,\n",
@@ -319,24 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:httpx:HTTP Request: GET https://api.tiingo.com/tiingo/daily/ZZZ/prices?startDate=2023-12-28&endDate=2024-05-10&format=csv&columns=date,adjClose,adjVolume&token=72b7d80c10cbdbdc839fe9556a7a004af06cf83c \"HTTP/1.1 200 OK\"\n",
-      "INFO:src.fetch:Saved data for ZZZ to data/sample/ZZZ_2023-12-28_2024-05-10.csv\n",
-      "INFO:httpx:HTTP Request: GET https://api.tiingo.com/tiingo/daily/CCAI/prices?startDate=2021-10-22&endDate=2023-08-31&format=csv&columns=date,adjClose,adjVolume&token=72b7d80c10cbdbdc839fe9556a7a004af06cf83c \"HTTP/1.1 200 OK\"\n",
-      "INFO:src.fetch:Saved data for CCAI to data/sample/CCAI_2021-10-22_2023-08-31.csv\n",
-      "INFO:httpx:HTTP Request: GET https://api.tiingo.com/tiingo/daily/AAPL/prices?startDate=1995-01-01&endDate=2024-05-10&format=csv&columns=date,adjClose,adjVolume&token=72b7d80c10cbdbdc839fe9556a7a004af06cf83c \"HTTP/1.1 200 OK\"\n",
-      "INFO:src.fetch:Saved data for AAPL to data/sample/AAPL_1995-01-01_2024-05-10.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_zzz = df_tickers.filter(\n",
+    "df_zzz = df_us_clean.filter(\n",
     "    ((pl.col(\"ticker\") == \"ZZZ\") & (pl.col(\"exchange\") == \"NASDAQ\"))\n",
     "    | (pl.col(\"ticker\") == \"AAPL\")\n",
     "    | (pl.col(\"ticker\") == \"CCAI\")\n",
@@ -346,43 +190,6 @@
     "    df=df_zzz,\n",
     "    columns=[\"date\", \"adjClose\", \"adjVolume\"],\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (1, 6)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ticker</th><th>exchange</th><th>assetType</th><th>priceCurrency</th><th>startDate</th><th>endDate</th></tr><tr><td>str</td><td>str</td><td>str</td><td>str</td><td>date</td><td>date</td></tr></thead><tbody><tr><td>&quot;CCAI&quot;</td><td>&quot;NASDAQ&quot;</td><td>&quot;Stock&quot;</td><td>&quot;USD&quot;</td><td>2021-10-22</td><td>2023-08-31</td></tr></tbody></table></div>"
-      ],
-      "text/plain": [
-       "shape: (1, 6)\n",
-       "┌────────┬──────────┬───────────┬───────────────┬────────────┬────────────┐\n",
-       "│ ticker ┆ exchange ┆ assetType ┆ priceCurrency ┆ startDate  ┆ endDate    │\n",
-       "│ ---    ┆ ---      ┆ ---       ┆ ---           ┆ ---        ┆ ---        │\n",
-       "│ str    ┆ str      ┆ str       ┆ str           ┆ date       ┆ date       │\n",
-       "╞════════╪══════════╪═══════════╪═══════════════╪════════════╪════════════╡\n",
-       "│ CCAI   ┆ NASDAQ   ┆ Stock     ┆ USD           ┆ 2021-10-22 ┆ 2023-08-31 │\n",
-       "└────────┴──────────┴───────────┴───────────────┴────────────┴────────────┘"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_us.filter(pl.col(\"ticker\") == \"CCAI\")"
    ]
   },
   {
