test: added tests and documentation to all modules

--- a/init-db/init.ipynb
+++ b/init-db/init.ipynb
@@ -24,6 +24,7 @@
     "import polars as pl\n",
     "import src.fetch\n",
     "import src.ingest\n",
+    "import src.transform\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()\n",
@@ -43,8 +44,7 @@
     "fetcher = src.fetch.Fetch(\n",
     "    client=httpx.AsyncClient(),\n",
     "    tiingo_token=environ[\"TIINGO_TOKEN\"],\n",
-    "    add_ticker_column=True,\n",
-    "    min_start_date=\"1995-01-01\",\n",
+    "    start_date=\"1995-01-01\",\n",
     "    save_dir=\"data/sample2\",\n",
     "    response_format=\"csv\",\n",
     "    failed_tickers_file=\"failed_tickers.csv\",\n",
@@ -55,37 +55,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TODO: problematic tickers:\n",
-    "\n",
-    "- Go through concrete cases and see which exchange they come from, and whether that could be a source to the issue. Consider skipping one of the exchanges if one seems problematic.\n",
-    "- Consider making a function deletes redundant csvs before ingestion. As part of the Ingest class.\n",
-    "  - Recurring pattern: may it be that the later file is always better (but not entire sure about this. Check other file name as well)\n",
-    "  - Pattern: if duplicate tickers, only select the row with the latest end date.\n",
-    "- TODO: move transformations to a Python module and add tests for the transformations\n",
-    "\n",
-    "### Concrete cases:\n",
-    "\n",
-    "- AWH: seems to be downloaded twice, but with the same data. Omit one of the fetches or skip the one of the exchanges, as that might be the issue.\n",
-    "- BETR: file BETR_2015-08-05_2023-08-29 seems be redundant, as it has only 4 days of data, which overlaps with a more recent file.\n",
-    "- BFLY-WS: BFLY-WS_2020-07-13_2022-12-23 is redundant. The other file is also incomplete, with the first row of data occuring about one year before the second row. After that it looks normal\n",
-    "- CNR: CNR_1995-01-01_2022-07-22 is redundant. Other file also looks suspicious.\n",
-    "- COGT: COGT_2007-12-27_2018-04-13 is redundant. Other file looks good.\n",
-    "- CSR: CSR_2007-10-29_2011-09-15 is redundant. Other file looks good.\n",
-    "- CZR: CZR_2012-02-08_2020-07-20 is redundant. Other file looks good.\n",
-    "- DD: DD_2017-08-03_2019-05-31 is redunant. Other file looks good."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "us_tickers_query = pathlib.Path(\"sql/selected_us_tickers.sql\").read_text()\n",
-    "duckdb_con.sql(us_tickers_query)"
+    "src.transform.create_selected_us_tickers_view(duckdb_con)"
    ]
   },
   {
@@ -100,7 +75,7 @@
        "│ count_star() │\n",
        "│    int64     │\n",
        "├──────────────┤\n",
-       "│        16945 │\n",
+       "│        16994 │\n",
        "└──────────────┘"
       ]
      },
@@ -121,24 +96,6 @@
    "source": [
     "df_us_clean = duckdb_con.table(\"selected_us_tickers\").pl()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(16945, 6)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -213,13 +170,6 @@
     "df_large = df_us_clean.sample(7022, seed=seed)\n",
     "df_large.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -488,20 +438,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -521,43 +457,6 @@
     "    sql_dir=\"sql\",\n",
     ")\n",
     "ingestor.create_table(file_name=\"create_table.sql\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "┌────────────┬───────────────┬───────────┬─────────┐\n",
-       "│    date    │   adjClose    │ adjVolume │ ticker  │\n",
-       "│    date    │ decimal(18,3) │  uint64   │ varchar │\n",
-       "├────────────┼───────────────┼───────────┼─────────┤\n",
-       "│ 2015-11-11 │        24.500 │   1584639 │ AAAP    │\n",
-       "│ 2015-11-12 │        25.000 │     83061 │ AAAP    │\n",
-       "│ 2015-11-13 │        25.260 │     67396 │ AAAP    │\n",
-       "│ 2015-11-16 │        25.020 │     16959 │ AAAP    │\n",
-       "│ 2015-11-17 │        24.620 │     25972 │ AAAP    │\n",
-       "│ 2015-11-18 │        25.000 │    111122 │ AAAP    │\n",
-       "│ 2015-11-19 │        25.900 │    113155 │ AAAP    │\n",
-       "│ 2015-11-20 │        25.200 │     60324 │ AAAP    │\n",
-       "│ 2015-11-23 │        25.150 │     59704 │ AAAP    │\n",
-       "│ 2015-11-24 │        25.620 │     56032 │ AAAP    │\n",
-       "├────────────┴───────────────┴───────────┴─────────┤\n",
-       "│ 10 rows                                4 columns │\n",
-       "└──────────────────────────────────────────────────┘"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ingestor.ingest_data(dst_table=\"daily_adjusted\", data=\"data/sample/*.csv\")\n",
-    "ingestor.cur.sql(\"SELECT * FROM daily_adjusted LIMIT 10\")"
    ]
   },
   {
@@ -582,36 +481,8 @@
     }
    ],
    "source": [
+    "ingestor.ingest_data(dst_table=\"daily_adjusted\", data=\"data/sample/*.csv\")\n",
     "ingestor.cur.sql(\"SELECT COUNT(*) FROM daily_adjusted\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "┌────────────┬───────────────┬───────────┬─────────┐\n",
-       "│    date    │   adjClose    │ adjVolume │ ticker  │\n",
-       "│    date    │ decimal(18,3) │  uint64   │ varchar │\n",
-       "├────────────┼───────────────┼───────────┼─────────┤\n",
-       "│ 2021-01-04 │        91.289 │   9523377 │ ABBV    │\n",
-       "│ 2021-01-05 │        92.233 │   6823826 │ ABBV    │\n",
-       "│ 2021-01-06 │        91.436 │  11017467 │ ABBV    │\n",
-       "│ 2021-01-07 │        92.415 │   8196046 │ ABBV    │\n",
-       "│ 2021-01-08 │        92.900 │   5345883 │ ABBV    │\n",
-       "└────────────┴───────────────┴───────────┴─────────┘"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ingestor.cur.sql(\"SELECT * FROM daily_adjusted WHERE ticker='ABBV' and date>='2021-01-04' and date<='2021-01-08'\")"
    ]
   },
   {
@@ -624,11 +495,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Last trading day snapshot\n",
+    "\n",
+    "This request downloads latest prices for all tickers avaialable in the Tiingo end-of-day API."
+   ]
   },
   {
    "cell_type": "code",
@@ -672,13 +545,6 @@
     "path = pathlib.Path(\"data/daily/snapshot_date.csv\")\n",
     "path.write_text(response.text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
