--- a/init-db/init.ipynb
+++ b/init-db/init.ipynb
@@ -105,7 +105,7 @@
     {
      "data": {
       "text/plain": [
-       "(500, 6)"
+       "(8497, 6)"
       ]
      },
      "execution_count": 6,
@@ -114,326 +114,56 @@
     }
    ],
    "source": [
-    "seed = 42\n",
-    "df_sampled = df_us_clean.sample(500, seed=seed)\n",
-    "df_sampled.shape"
+    "half = df_us_clean.shape[0] // 2\n",
+    "df_first = df_us_clean.slice(0, half)\n",
+    "df_first.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "await fetcher.fetch_supported_tickers(\n",
-    "    df=df_sampled,\n",
-    "    columns=[\"date\", \"adjClose\", \"adjVolume\"],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_zzz = df_us_clean.filter(\n",
-    "    ((pl.col(\"ticker\") == \"ZZZ\") & (pl.col(\"exchange\") == \"NASDAQ\"))\n",
-    "    | (pl.col(\"ticker\") == \"AAPL\")\n",
-    "    | (pl.col(\"ticker\") == \"CCAI\")\n",
-    ")\n",
-    "\n",
-    "await fetcher.fetch_supported_tickers(\n",
-    "    df=df_zzz,\n",
-    "    columns=[\"date\", \"adjClose\", \"adjVolume\"],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7022, 6)"
+       "(8497, 6)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "seed=42\n",
-    "df_large = df_us_clean.sample(7022, seed=seed)\n",
-    "df_large.shape"
+    "df_second = df_us_clean.slice(half, df_us_clean.shape[0])\n",
+    "df_second.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 0 to 400 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:Invalid response for LCI.\n",
-      "ERROR:src.fetch:An error occurred while requesting https://api.tiingo.com/tiingo/daily/DGRS/prices?startDate=2013-07-25&endDate=2024-05-10&format=csv&columns=date,adjClose,adjVolume&token=72b7d80c10cbdbdc839fe9556a7a004af06cf83c: [Errno 8] nodename nor servname provided, or not known\n",
-      "ERROR:src.fetch:response.text for DGRS is None.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 400 to 800 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:Invalid response for AVYA.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 800 to 1200 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:Invalid response for SUNH.\n",
-      "ERROR:src.fetch:Invalid response for VISN.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 1200 to 1600 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:No data found for IGLD.\n",
-      "ERROR:src.fetch:Invalid response for PEAK.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 1600 to 2000 of 7022\n",
-      "Fetching 2000 to 2400 of 7022\n",
-      "Fetching 2400 to 2800 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:No data found for PNT.\n",
-      "ERROR:src.fetch:No data found for PCPCW.\n",
-      "ERROR:src.fetch:No data found for PKDC.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 2800 to 3200 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:Invalid response for STLRU.\n",
-      "ERROR:src.fetch:No data found for MMX.\n",
-      "ERROR:src.fetch:Invalid response for SCACU.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 3200 to 3600 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:No data found for GWGHQ.\n",
-      "ERROR:src.fetch:No data found for HZON-WS.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 3600 to 4000 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:No data found for ALLG-WS.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 4000 to 4400 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:Invalid response for HME.\n",
-      "ERROR:src.fetch:Invalid response for CEAI.\n",
-      "ERROR:src.fetch:No data found for CYPS.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 4400 to 4800 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:No data found for UBP-P-K.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 4800 to 5200 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:Invalid response for AGII.\n",
-      "ERROR:src.fetch:No data found for GSOL.\n",
-      "ERROR:src.fetch:No data found for WORK.\n",
-      "ERROR:src.fetch:No data found for ENSCW.\n",
-      "ERROR:src.fetch:Invalid response for ACAMU.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 5200 to 5600 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:No data found for FRG.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 5600 to 6000 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:HTTP status error for https://api.tiingo.com/tiingo/daily/BC/PB/prices?startDate=2018-12-06&endDate=2024-05-10&format=csv&columns=date,adjClose,adjVolume&token=72b7d80c10cbdbdc839fe9556a7a004af06cf83c: Client error '404 Not Found' for url 'https://api.tiingo.com/tiingo/daily/BC/PB/prices?startDate=2018-12-06&endDate=2024-05-10&format=csv&columns=date,adjClose,adjVolume&token=72b7d80c10cbdbdc839fe9556a7a004af06cf83c'\n",
-      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/404\n",
-      "ERROR:src.fetch:response.text for BC/PB is None.\n",
-      "ERROR:src.fetch:Invalid response for LFC.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 6000 to 6400 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:No data found for MEME.\n",
-      "ERROR:src.fetch:An error occurred while requesting https://api.tiingo.com/tiingo/daily/PTRB/prices?startDate=2021-12-08&endDate=2024-05-10&format=csv&columns=date,adjClose,adjVolume&token=72b7d80c10cbdbdc839fe9556a7a004af06cf83c: [Errno 8] nodename nor servname provided, or not known\n",
-      "ERROR:src.fetch:response.text for PTRB is None.\n",
-      "ERROR:src.fetch:Invalid response for FOGO.\n",
-      "ERROR:src.fetch:Invalid response for TFG.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 6400 to 6800 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:Invalid response for CIC-U.\n",
-      "ERROR:src.fetch:No data found for RESI.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching 6800 to 7200 of 7022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:src.fetch:No data found for AMPIW.\n",
-      "ERROR:src.fetch:Invalid response for ABDC.\n",
-      "ERROR:src.fetch:No data found for SAAS.\n",
-      "ERROR:src.fetch:No data found for KEGX.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "await fetcher.fetch_all(\n",
-    "    df=df_large,\n",
+    "    df=df_first,\n",
     "    columns=[\"date\", \"adjClose\", \"adjVolume\"],\n",
-    "    async_batch_size=400\n",
+    "    async_batch_size=500\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wait for the next clock hour to ingest the second half (due to 10k API limit per hour)\n",
+    "await fetcher.fetch_all(\n",
+    "    df=df_second,\n",
+    "    columns=[\"date\", \"adjClose\", \"adjVolume\"],\n",
+    "    async_batch_size=500\n",
     ")"
    ]
   },
@@ -541,7 +271,6 @@
     }
    ],
    "source": [
-    "import pathlib\n",
     "path = pathlib.Path(\"data/daily/snapshot_date.csv\")\n",
     "path.write_text(response.text)"
    ]
